--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "nuxt": "^2.0.0",
+    "vue2-hammer": "^2.1.2",
     "vue2-touch-events": "^2.3.2"
   },
   "devDependencies": {
