--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "emailjs-com": "^2.6.3",
     "nuxt": "^2.0.0",
+    "redirect-ssl": "^2.0.0",
     "vue2-hammer": "^2.1.2",
     "vue2-touch-events": "^2.3.2"
   },
