--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "emailjs-com": "^2.6.3",
     "nuxt": "^2.0.0",
     "redirect-ssl": "^2.0.0",
+    "vue-clazy-load": "^0.4.2",
+    "vue-onload": "^0.6.0",
     "vue2-hammer": "^2.1.2",
     "vue2-touch-events": "^2.3.2"
   },
