--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.19.2",
     "emailjs-com": "^2.6.3",
     "nuxt": "^2.0.0",
+    "nuxt-compress": "^3.0.0",
     "redirect-ssl": "^2.0.0",
     "vue-clazy-load": "^0.4.2",
     "vue-onload": "^0.6.0",
