--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue2-touch-events": "^2.3.2"
   },
   "devDependencies": {
+    "@nuxtjs/google-fonts": "^1.0.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0"
   }
